some functionality was added

--- a/index.html
+++ b/index.html
@@ -181,6 +181,27 @@
   </div>
 </template>
 
+<script>
+  var fireballSize = 22;
+  var wizardSpeed = 3;
+  var wizardWidth = 70;
+
+  var getFireballSpeed = function(left) {
+    return left ? 5 : 2;
+  };
+
+  var getWizardHeight = function() {
+    return 1.337 * wizardWidth;
+  };
+
+  var getWizardX = function(width) {
+    return width / 2;
+  };
+
+  var getWizardY = function(height) {
+    return height / 3 * 2;
+  };
+</script>
 <script src="js/game.js"></script>
 
 </body>
