module3-task1 homework was made

--- a/index.html
+++ b/index.html
@@ -202,7 +202,7 @@
     return height / 3 * 2;
   };
 </script>
-<script src="js.setup.js"></script>
+<script src="js/setup.js"></script>
 <script src="js/stat.js"></script>
 <script src="js/game.js"></script>
 
