--- a/index.html
+++ b/index.html
@@ -70,6 +70,7 @@
 <div class="overlay setup hidden">
   <form class="setup-wizard-form"
         method="post"
+        action="https://js.dump.academy/code-and-magick"
         enctype="multipart/form-data"
         autocomplete="off">
 
@@ -81,7 +82,7 @@
         </div>
         <label>
           <input type="text" name="username"
-                 maxlength="25" required
+                 maxlength="25" minlength="2" required
                  class="setup-user-name" value="Синий Пендальф"/>
         </label>
       </div>
